Update with public changes

--- a/{{cookiecutter.name}}/Makefile
+++ b/{{cookiecutter.name}}/Makefile
@@ -1,21 +1,30 @@
-PYTHON := env/bin/python
-PIP := env/bin/pip
-MYPY := env/bin/mypy
+default: ci
 
 env:
 	python -m venv env
 
 deps: env
-	$(PIP) install -U -r requirements/base.txt
+	env/bin/pip install -U -r requirements/base.txt
 
 dev-deps: deps env
-	$(PIP) install -U -r requirements/dev.txt
+	env/bin/pip install -U -r requirements/dev.txt
 
 test:
-	$(PYTHON) -m unittest discover -s tests
+	env/bin/python -m unittest discover -s tests
 
 typecheck:
-	$(MYPY) .
+	env/bin/mypy .
+
+fmtcheck:
+	env/bin/black --check {{cookiecutter.name}} tests
+
+lint:
+	env/bin/pylint {{cookiecutter.name}} tests
+
+ci: dev-deps fmtcheck typecheck test lint
 
 run:
-	$(PYTHON) {{cookiecutter.name}}/app.py
+	env/bin/python {{cookiecutter.name}}/app.py
+
+clean:
+	rm -rf env .mypy_cache
